--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ h4 span:first-child {
 						Cecilia Webber
 					</h1>
 					<h2>
-						Programmer
+						Biologist Wannabe
 					</h2>
 				</div>
 			</div>
